--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==2.1.0
 astunparse==1.6.3
+cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
@@ -10,7 +11,9 @@ filelock==3.16.0
 flatbuffers==24.3.25
 fonttools==4.53.1
 fsspec==2024.9.0
-gast==0.6.0
+gast==0.4.0
+google-auth==2.35.0
+google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.66.1
 h5py==3.11.0
@@ -19,7 +22,7 @@ idna==3.10
 imageio==2.35.1
 Jinja2==3.1.4
 joblib==1.4.2
-keras==3.5.0
+keras==2.10.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.7
 lazy_loader==0.4
@@ -47,18 +50,24 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.6.68
 nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.2
 opencv-python==4.10.0.84
 opt-einsum==3.3.0
 optree==0.12.1
 packaging==24.1
 pillow==10.4.0
-protobuf==4.25.4
+protobuf==3.19.6
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycairo==1.27.0
 Pygments==2.18.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
+python-version==0.0.2
 requests==2.32.3
+requests-oauthlib==2.0.0
 rich==13.8.1
+rsa==4.9
 scikit-image==0.24.0
 scikit-learn==1.5.2
 scipy==1.14.1
@@ -66,11 +75,11 @@ shellingham==1.5.4
 SimpleITK==2.4.0
 six==1.16.0
 sympy==1.13.2
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-estimator==2.15.0
-tensorflow-io==0.37.1
+tensorboard==2.10.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.10.0
+tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.4.0
 threadpoolctl==3.5.0
